# kobo-sync-rat

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/kobo_sync/: dependencies.py
src/kobo_sync/commands/: __init__.py
src/kobo_sync/models/kobo/: auth.py  generic.py
src/kobo_sync/models/kobo/configuration/: __init__.py  user_profile.py
src/kobo_sync/models/kobo/sync/: __init__.py  metadata.py  sync.py
src/kobo_sync/routers/: auth.py  configuration.py  library.py  store.py
src/kobo_sync/source/: filesystem.py  grimmory.py
src/kobo_sync_rat/: app.py  cli.py  dependencies.py  responses.py
src/kobo_sync_rat/commands/: serve.py
src/kobo_sync_rat/metadata/: base.py  epub.py  epub2.py
src/kobo_sync_rat/middleware/: __init__.py  logger.py  override_base_url.py
src/kobo_sync_rat/models/: dataclass.py
src/kobo_sync_rat/models/kobo/: auth.py  generic.py  store.py  subscriptions.py
src/kobo_sync_rat/models/kobo/configuration/: resources.py  user_profile.py
src/kobo_sync_rat/routers/: __init__.py  auth.py  configuration.py  documentation.py  library.py  store.py
src/kobo_sync_rat/source/: filesystem.py  grimmory.py  source.py
