[project]
name = "kobo-sync-rat"
version = "0.1.0"
description = "Sync Ebooks from your nest, wherever that is, to your Kobo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
serve = "kobo_sync_rat.commands:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobo_sync_rat"]

[tool.ruff.lint]
preview = true
select = [
    "E4",       # Import rules
    "E7",       # Statement rules
    "E9",       # Runtime rules
    "F",        # All Pyflakes rules
    "B006",     # mutable-argument-default: Do not use mutable data structures for argument defaults
    "B008",     # function-call-in-default-argument: Do not perform function call {name} in argument defaults;
    "PIE790",   # unnecessary-placeholder: Unnecessary pass statement
    "S303",     # suspicious-insecure-hash-usage: Use of insecure MD2, MD4, MD5, or SHA1 hash function
    "S324",     # hashlib-insecure-hash-function: Probable use of insecure hash functions in {library}: {string}
    "I",        # All isort rules
    "D",        # All pydocstyle rules
]
ignore = [
    "D1",       # Don't enforce existence of docstrings
]
extend-unsafe-fixes = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
